--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: My Findings and Sharings
-subtitle: Solving problems, usually one at a time.
+title: solving problems, usually one at a time
+subtitle: My Findings and Sharings amongst this chaos
 ---
