pictures are showing?

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: solving problems, usually one at a time
+title: Solving Problems Usually One at a Time
 subtitle: My Findings and Sharings amongst this chaos
 ---
